--- a/weather-archive-viewer/package.json
+++ b/weather-archive-viewer/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "papaparse": "^5.4.1",
+    "rc-slider": "^11.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-window": "^1.8.10",
