--- a/weather-archive-viewer/package.json
+++ b/weather-archive-viewer/package.json
@@ -11,6 +11,7 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.81.2",
     "papaparse": "^5.4.1",
     "rc-slider": "^11.1.7",
     "react": "^18.3.1",
