--- a/weather-archive-viewer/package.json
+++ b/weather-archive-viewer/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.81.2",
+    "caniuse-lite": "^1.0.30001726",
     "papaparse": "^5.4.1",
     "rc-slider": "^11.1.7",
     "react": "^18.3.1",
