--- a/weather-archive-viewer/package.json
+++ b/weather-archive-viewer/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "biome lint",
+    "lint:fix": "bunx biome check --write",
     "preview": "vite preview",
     "deploy": "vite build && gh-pages -d dist"
   },
@@ -21,6 +22,7 @@
     "recharts": "^2.13.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.0.6",
     "@eslint/js": "^9.13.0",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.12",
