Update VSCode settings to include biome configuration and code actions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
-    
     "files.autoSave": "afterDelay",
     "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.biome": "explicit"
+    },
+    "biome.configurationPath": "weather-archive-viewer/biome.json",
     "editor.tabSize": 2,
 }
