--- a/weather-archive-viewer/package.json
+++ b/weather-archive-viewer/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.81.5",
+    "@types/react-window": "^1.8.8",
     "caniuse-lite": "^1.0.30001726",
     "papaparse": "^5.4.1",
     "rc-slider": "^11.1.7",
